--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
   <h1 class="main">Discover hidden places in the world around you</h1>
   <p class="link">Download Excursion (Coming soon!)</p>
+  <h1 class="description">Your personal travel guide</h1>
+  <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
+  <h1 class="description">Coming soon for iPhone and Android</h1>
 </body>
 </html>
