--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 </head>
 <body>
   <h1 class="main">Discover hidden places in the world around you</h1>
+
+  <video src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4"/></video>
   <p class="link">Download Excursion (Coming soon!)</p>
   <h1 class="description">Your personal travel guide</h1>
   <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg"/><br /><br />
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png"/>
   <h1 class="description">Coming soon for iPhone and Android</h1>
+  <p id="copyright">© Excursion</p>
 </body>
 </html>
