--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1 class="main">Discover hidden places in the world around you</h1>
 
-  <video src="./resources/videos/excursion.mp4"/></video>
+  <video src="./resources/videos/excursion.mp4" autoplay controls/></video>
   <p class="link">Download Excursion (Coming soon!)</p>
   <h1 class="description">Your personal travel guide</h1>
   <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
